make transforms plugin into a cargo feature

--- a/crates/bevy_godot/Cargo.toml
+++ b/crates/bevy_godot/Cargo.toml
@@ -9,6 +9,7 @@ default = []
 
 trace = ["bevy/trace"]
 trace_chrome = ["trace", "bevy/trace_chrome"]
+transforms = []
 
 [dependencies]
 gdnative = "0.11"
