--- a/examples/assets_demo/Cargo.toml
+++ b/examples/assets_demo/Cargo.toml
@@ -13,5 +13,5 @@ crate-type = ["cdylib"]
 
 [dependencies]
 bevy = {version = "0.9", default-features = false}
-bevy_godot = {path = "../../crates/bevy_godot"}
+bevy_godot = {path = "../../crates/bevy_godot", features = ["transforms"]}
 bevy_asset_loader = "0.14.0"
