--- a/examples/dodge_the_creeps/Cargo.toml
+++ b/examples/dodge_the_creeps/Cargo.toml
@@ -13,6 +13,6 @@ crate-type = ["cdylib"]
 
 [dependencies]
 bevy = {version = "0.9", default-features = false}
-bevy_godot = {path = "../../crates/bevy_godot"}
+bevy_godot = {path = "../../crates/bevy_godot", features = ["transforms"]}
 fastrand = "1.8.0"
 bevy_asset_loader = "0.14.0"
